# teg

./: .astylerc  .cproject  .gitignore  .project  404.html  AUTHORS  ChangeLog  HACKING  HACKING.rst  Makefile  Makefile.am  Makefile.am.orig  Makefile.am.rej  Makefile.in  PEOPLE  README  README.GGZ  README.md  ReleaseNotes.txt  TODO  aclocal.m4  autogen.sh  build  build.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.in  configure.in.rej  fix_doc_sgml_C.diff  fix_doc_sgml_pl.diff  index.html  intltool-extract  intltool-merge  intltool-update  intltool-update.in  libtool  (+5 more)
client/: Makefile  Makefile.am  Makefile.in  attack.c  attack.cpp  attack.h  canje.c  canje.cpp  canje.h  client.h  countries.c  countries.h  ejer2.c  ejer2.cpp  ejer2.h  fichas.c  fichas.cpp  fichas.h  ggz_client.c  ggz_client.h  globals.c  globals.h  helper.c  helper.cpp  helper.h  helper_check.cpp  inputfd.c  inputfd.cpp  inputfd.h  main.c  main.cpp  main.h  metaserver.c  metaserver.h  misc.c  misc.cpp  misc.h  outputfd.c  outputfd.cpp  outputfd.h  (+10 more)
client/.deps/: attack.Po  canje.Po  countries.Po  ejer2.Po  fichas.Po  ggz_client.Po  globals.Po  helper.Po  inputfd.Po  main.Po  metaserver.Po  misc.Po  outputfd.Po  player.Po  reagrupe.Po  themes.Po
client/gui-gnome/: Makefile  Makefile.am  Makefile.in  armies.c  armies.cpp  armies.h  callbacks.c  callbacks.cpp  callbacks.h  cards.c  cards.cpp  cards.h  chatline.c  chatline.cpp  chatline.h  colors.c  colors.cpp  colors.h  connect.c  connect.cpp  connect.h  dices.c  dices.cpp  dices.h  fonts.h  g_cont.c  g_cont.cpp  g_cont.h  g_country.c  g_country.cpp  g_country.h  g_scores.c  g_scores.cpp  g_scores.h  gui.c  gui.cpp  gui.h  interface.c  interface.cpp  interface.h  (+30 more)
client/gui-gnome/.deps/: armies.Po  callbacks.Po  cards.Po  chatline.Po  colors.Po  connect.Po  dices.Po  g_cont.Po  g_country.Po  g_scores.Po  gui.Po  interface.Po  locate_country.Po  mission.Po  preferences.Po  priv.Po  status.Po  stock.Po  support.Po
client/gui-gnome/stock/: Makefile  Makefile.am  Makefile.in  stock-endturn.xpm  stock-getcard.xpm  stock-sendarmies.xpm  stock-viewplayers.xpm  stock-zoom-1.xpm
client/gui-null/: Makefile.am  null.c  null.cpp
client/gui-sdl/: Makefile.am  README  compile  gui.c  gui.h  library
client/gui-www/: server.js
client/gui-www/client/: index.html
client/teg_pix/: Makefile  Makefile.am  Makefile.in  teg_icono.xpm
client/themes/: Makefile  Makefile.am  Makefile.in  README
client/themes/TEG/: Makefile.am  teg_theme.xml
client/themes/classic/: Makefile.am  teg_theme.xml  translate.c
client/themes/draco/: Makefile  Makefile.am  Makefile.in  teg_theme.xml
client/themes/m2/: Africa-Egipto  Africa-Ethiopia  Africa-Madagascar  Africa-Zaire  America-California  America-Canada  America-Groenlandia  America-Labrador  America-Mexico  America-Yukon  Asia-Aral  Asia-China  Asia-Gobi  Asia-India  Asia-Kamchatka  Asia-Mongolia  Asia-Siberia  Asia-Tartaria  Asia-Turquia  Australia-Java  Australia-Sumatra  Europe-Alemania  Europe-Polonia  Europe-Rusia  Europe-Suecia  Makefile  Makefile.am  Makefile.in  Southamerica-Brasil  Southamerica-Colombia  Southamerica-Peru  teg_theme.xml  translate.c
client/themes/m3/: Africa-Ethiopia  Africa-Sudafrica  Africa-Sudafrica.pnm  Africa-Zaire  America-Alaska  America-Canada  America-Mexico  America-Oregon  America-Terranova  Asia-Arabia  Asia-Aral  Asia-Iran  Asia-Israel  Asia-Kamchatka  Asia-Malaysia  Asia-Taimir  Asia-Turquia  Australia-Java  Australia-Sumatra  Board  Europe-Espania  Europe-Polonia  Europe-Rusia  Gamepannel  Southamerica-Argentinia  Southamerica-Uruguay  png2svg.sh  teg_theme.xml
client/themes/modern/: Makefile.am  teg_theme.xml  translate.c
client/themes/sentimental/: Africa-Egipto  Africa-Madagascar  Africa-Sahara  America-California  America-Groenlandia  America-Mexico  America-Nuevayork  America-Oregon  Asia-Arabia  Asia-China  Asia-Malaysia  Asia-Mongolia  Asia-Siberia  Asia-Taimir  Asia-katchatka  Australia-Australia  Australia-Sumatra  Australia_Java  Europe-Alemania  Europe-Francia  Europe-Islandia  Makefile  Makefile.am  Makefile.in  Southamerica-Brasil  Southamerica-Peru  Southamerica-Uruguay  (+3 more)
client/www/: README.md  Riskmap.filkor.org.htm  board.js  board.xml  index.html  package.json  server.js  snap.html  teg.html
common/: Makefile  Makefile.am  Makefile.in  all.h  common.c  common.cpp  common.h  common_check.cpp  cont.c  cont.cpp  cont.h  country.c  country.cpp  country.h  execute.cpp  execute.hpp  fcintl.h  limitrof.h  missions.c  missions.cpp  missions.h  my_inet_ntop.c  my_inet_ntop.h  net.c  net.cpp  net.h  pactos.c  pactos.h  parser.c  parser.cpp  parser.h  parser_check.cpp  parser_private.h  protocol.h  scores.c  scores.h  scores_check.cpp  share.c  share.cpp  share.h  (+16 more)
common/.deps/: common.Po  cont.Po  country.Po  missions.Po  my_inet_ntop.Po  net.Po  pactos.Po  parser.Po  scores.Po  share.Po  stats.Po  support.Po  tarjeta.Po  xml_support.Po
ggz/: Makefile  Makefile.am  Makefile.in  README  teg.dsc  teg.dsc.in  teg.room  tegclient.dsc  tegclient.dsc.in
robot/: Makefile  Makefile.am  Makefile.in  ai.c  ai.cpp  ai.h  ai_fichas.c  ai_fichas.cpp  ai_fichas.h  ai_misc.c  ai_misc.cpp  ai_misc.h  ai_msg.c  ai_msg.cpp  ai_msg.h  dijkstra.c  dijkstra.h  gui.c  gui.cpp  gui.h  main.c  main.cpp  main.h  tegrobot
robot/.deps/: ai.Po  ai_fichas.Po  ai_misc.Po  ai_msg.Po  dijkstra.Po  gui.Po  main.Po
server/: CHANGES  Makefile  Makefile.am  Makefile.in  console.c  console.cpp  console.h  countries.c  countries.cpp  countries.h  fow.c  fow.cpp  fow.h  ggz_server.c  ggz_server.h  globals.h  helper.c  helper.cpp  helper.h  helper_check.cpp  main.c  main.cpp  main.h  metaserver.c  metaserver.h  missions.c  missions.cpp  missions.h  options.c  options.cpp  options.h  play.c  play.cpp  play.h  player.c  player.cpp  player.h  player_check.cpp  sernet.c  sernet.cpp  (+9 more)
server/.deps/: console.Po  countries.Po  fow.Po  ggz_server.Po  helper.Po  main.Po  metaserver.Po  missions.Po  options.Po  play.Po  player.Po  sernet.Po  turno.Po  xmlscores.Po
(+231 files in other folders)
