pixmapdir=$(datadir)/pixmaps/teg_pix
appicondir=$(datadir)/pixmaps

pixmap_DATA =	\
	objetivo.png teg_icono.png teg_icono.xpm \
	color_player_green.png color_player_red.png color_player_black.png color_player_pink.png color_player_yellow.png color_player_blue.png \
	disc_black.png disc_blue.png disc_green.png disc_pink.png disc_red.png disc_yellow.png disc_grey.png \
	disc_over.png

EXTRA_DIST = $(pixmap_DATA)

appicon_DATA = teg_icono.png
