pixmapdir=$(datadir)/teg/themes/TEG

pixmap_DATA =	\
	Africa_Egipto.png Africa_Etiopia.png Africa_Madagascar.png Africa_Sahara.png Africa_Sudafrica.png Africa_Zaire.png \
	America_del_Norte_Alaska.png America_del_Norte_California.png America_del_Norte_Canada.png America_del_Norte_Groenlandia.png \
	America_del_Norte_Labrador.png America_del_Norte_Mexico.png America_del_Norte_Nueva_York.png \
	America_del_Norte_Orgeon.png America_del_Norte_Terranova.png America_del_Norte_Yukon.png America_del_Sur_Argentina.png \
	America_del_Sur_Brasil.png America_del_Sur_Chile.png America_del_Sur_Colombia.png America_del_Sur_Peru.png \
	America_del_Sur_Uruguay.png Asia_Arabia.png Asia_Aral.png Asia_China.png Asia_Gobi.png Asia_India.png Asia_Iran.png \
	Asia_Israel.png Asia_Japon.png Asia_Kamtchatka.png Asia_Malasia.png Asia_Mongolia.png \
	Asia_Siberia.png Asia_Tamyr.png Asia_Tartaria.png Asia_Turquia.png Europe_Alemania.png Europe_Espania.png Europe_Francia.png \
	Europe_Gran_Bretana.png Europe_Islandia.png Europe_Italia.png Europe_Polonia.png \
	Europe_Rusia.png Europe_Suecia.png Oceania_Australia.png Oceania_Borneo.png Oceania_Java.png Oceania_Sumatra.png \
	map.png mini_shot.png \
	dice-1.png dice-2.png dice-3.png dice-4.png dice-5.png dice-6.png \
	bar.png \
	tar_caballo.png tar_comodin.png  tar_galeon.png tar_globo.png \
	teg_theme.xml
