pixmapdir=$(datadir)/pixmaps/teg_pix/themes/m2

pixmap_DATA =	\
	Africa-Egipto Africa-Etiopia Africa-Madagascar Africa-Sahara Africa-Sudafrica Africa-Zaire	\
	America-Alaska America-California America-Canada America-Groenlandia America-Labrador America-Mexico America-Nuevayork America-Oregon America-Terranova America-Yukon	\
	Asia-Arabia Asia-Aral Asia-China Asia-Gobi Asia-India Asia-Iran Asia-Israel Asia-Japon Asia-Katchatka Asia-Malaysia Asia-Mongolia Asia-Siberia Asia-Taimir Asia-Tartaria Asia-Turquia	\
	Australia-Australia Australia-Borneo Australia-Java Australia-Sumatra	\
	Europe-Alemania Europe-Espania Europe-Francia Europe-Grand_Bretania Europe-Islandia Europe-Italia Europe-Polonia Europe-Rusia Europe-Suecia	\
	Southamerica-Argentinia Southamerica-Brasil Southamerica-Chile Southamerica-Colombia Southamerica-Peru Southamerica-Uruguay	\
	board.jpg mini_shot.png	\
	dice-1.png dice-2.png dice-3.png dice-4.png dice-5.png dice-6.png	\
	infobar.png	\
	tar_cannon.png tar_horse.png tar_infantry.png tar_jocker.png	\
	teg_theme.xml

EXTRA_DIST = $(pixmap_DATA) translate.c
