# We need our own version of sgmldocs.make to get the Polish letters right!


figs = \
	figure/connect.png	\
	figure/dices.png	\
	figure/mission.png	\
	figure/selectcolor.png	\
	figure/server.png	\
	figure/toolbar_start.png
docname = teg
lang = pl
omffile=teg-pl.omf
sgml_ents =
include $(top_srcdir)/docs/gnome-help/pl/sgmldocs.make
dist-hook: app-dist-hook
