pixmapdir=$(datadir)/pixmaps/teg_pix/themes/modern

pixmap_DATA =	\
	teg_theme.xml		\
	board.png		\
	mini_shot.png		\
	dice-1.png dice-2.png dice-3.png dice-4.png dice-5.png dice-6.png \
	argentina.png brasil.png chile.png colombia.png peru.png uruguay.png	\
	mexico.png california.png oregon.png nuevayork.png alaska.png yukon.png canada.png terranova.png labrador.png groenlandia.png	\
	sahara.png zaire.png ethiopia.png egipto.png madagascar.png sudafrica.png \
	australia.png java.png sumatra.png borneo.png \
	espania.png francia.png italia.png alemania.png polonia.png rusia.png gran_bretania.png suecia.png islandia.png \
	arabia.png israel.png turquia.png iran.png india.png malasia.png gobi.png mongolia.png china.png japon.png aral.png siberia.png tartaria.png taimir.png kamchatka.png japon.png \
	tar_cannon.png tar_jocker.png tar_infantry.png tar_horse.png

EXTRA_DIST = $(pixmap_DATA) translate.c
