pixmapdir=$(datadir)/pixmaps/teg_pix/themes/sentimental

pixmap_DATA =	\
	Africa-Egipto Africa-Etiopia Africa-Madagascar Africa-Sahara \
	Africa-Sudafrica Africa-Zaire America-Alaska America-California \
	America-Canada America-Groenlandia America-Labrador America-Mexico \
	America-Nuevayork America-Oregon America-Terranova America-Yukon \
	Asia-Arabia Asia-Aral Asia-China Asia-Gobi Asia-India Asia-iran \
	Asia-Israel Asia-japon Asia-katchatka Asia-Malaysia Asia-Mongolia \
	Asia-Siberia Asia-Taimir Asia-Tartaria Asia-Turquia Australia-Australia \
	Australia_Borneo Australia_Java Australia-Sumatra board.jpg cannon.png \
	dice-1.png dice-2.png dice-3.png dice-4.png dice-5.png dice-6.png \
	Europe-Alemania Europe-Espania Europe-Francia Europe-Grand_Bretania \
	Europe-Islandia Europe-Italia Europe-Polonia Europe-Rusia Europe-Suecia \
	horse.png infantry.png Infobar.png jocker.png mini_shot.png \
	Southamerica-Argentinia Southamerica-Brasil Southamerica-Chile \
	Southamerica-Colombia Southamerica-Peru Southamerica-Uruguay \
	teg_theme.xml

EXTRA_DIST = $(pixmap_DATA) translate.c
